[package]
name = "ruft"
license = "MIT"
version = "0.0.1"
description = "Raft in Rust"
repository = "https://github.com/aQuaYi/ruft/"
authors = ["aQua <hi@aQuaYi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
